--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "clarifai": "^2.9.0",
-    "npm": "^6.9.0",
+    "npm": "^6.10.1",
     "particlesjs": "^2.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-particles-js": "^2.6.0",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "tachyons": "^4.11.1"
   },
   "scripts": {
